TreeAnalysis/Plot/Temp5/CR2P2F_sigTot+irred_bkg_tot+red_bkg.txt
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/WH126.root does not exist
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/ZH126.root does not exist
TFile::Init:0: RuntimeWarning: no StreamerInfo found in ../results/ZZjAnalyzer_CR2P2F/TTGJets.root therefore preventing schema evolution when reading this file.
Error in <TFile::TFile>: file ../results/ZZjAnalyzer_CR2P2F/DYJetsToLLTuneZ2M10.root does not exist
Info in <TCanvas::Print>: file Stack_CR2P2F_sigTot+irred_bkg_tot+red_bkg.png has been created
Info in <TCanvas::SaveAs>: ROOT file Stack_CR2P2F_sigTot+irred_bkg_tot+red_bkg.root has been created

######### Contribution to fake rate #########

DoubleMu .......................... 3.23906214756
DoubleEle .......................... 2.72710876539
MuEG .......................... 0.0563635145081
                                __________________ 

Reducible background---------->  6.02253441082 


######### MonteCarlo samples #########

WWZJets .......................... 0.000259930630591
TTWWJets .......................... 1.85940391848e-05
TTZJets .......................... 0.00313402951542
ZZTo2e2mu .......................... 0.000481636791423
ZZTo2e2muJJ_SMHContinInterf_H125.6 .......................... 2.79922066832e-05
ZZTo4eJJ_SMHContinInterf_H125.6 .......................... 1.38276203923e-05
ZZTo4e .......................... 0.000291843325073
ZZTo4mu .......................... 0.000258184857341
ZZTo4muJJ_SMHContinInterf_H125.6 .......................... 1.74527934759e-05
ggTo2e2mu_SMHContinInterf-MCFM67_H125.6 .......................... 3.24103982563e-05
ggTo4e_SMHContinInterf-MCFM67_H125.6 .......................... 1.98215064784e-05
ggTo4mu_SMHContinInterf-MCFM67_H125.6 .......................... 1.86466039072e-05
ZZZJets .......................... 6.66305493837e-05
WZZJets .......................... 0.0002189963935
WH126  has no entries or is a zombie
ZH126  has no entries or is a zombie
ttH126 .......................... 1.14760549086e-05
WWWJets .......................... 4.57405341194e-05
WZ .......................... 0.00519785212106
TTTo2L2Nu2B .......................... 0.116367894314
TTWJets .......................... 0.000921293873034
TTGJets  has no entries or is a zombie
DYJetsToLLTuneZ2M50 .......................... 2.07988404616
DYJetsToLLTuneZ2M10  has no entries or is a zombie

######### Data #########

DoubleMu .......................... 1.34022277
DoubleEle .......................... 1.13437997922
MuEG .......................... 0.0347230090993
DoubleMu INTEGRAL HVAR =  -0.0347230090993 N BINS 200
DoubleEle INTEGRAL HVAR =  -0.0347230090993 N BINS 200
MuEG INTEGRAL HVAR =  -0.0347230090993 N BINS 200
TOTAL  0.0238406363657
digit anything you want to end the script 
Traceback (most recent call last):
  File "./scriptStack.py", line 46, in <module>
    CloseVar=input("digit anything you want to end the script \n")        
  File "<string>", line 0
    
    ^
SyntaxError: unexpected EOF while parsing
